--- a/PlanGeneratorFE/src/app/employees/employee-detail/employee-detail.component.html
+++ b/PlanGeneratorFE/src/app/employees/employee-detail/employee-detail.component.html
@@ -22,60 +22,12 @@
           <div class="tab-content" id="nav-tabContent">
             <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
               <table class="table" cellspacing="0">
-                <thead>
-                  <tr>
-                    <th>Start Date</th>
-                    <th>End Date</th>
-                    <th>Type</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr *ngFor="let absDate of employeeAbsenceDates">
-                    <td>{{absDate.startDate}}</td>
-                    <td>{{absDate.endDate}}</td>
-                    <td>{{absDate.type}} Not Implemented</td>
-                  </tr>                  
-                </tbody>
+                <app-employee-absence-dates></app-employee-absence-dates>
               </table>
             </div>
             <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
               <table class="table" cellspacing="0">
-                <thead>
-                  <tr>
-                    <th>First Shift SD</th>
-                    <th>First Shift ED</th>
-                    <th>Second Shift SD</th>
-                    <th>Second Shift ED</th>
-                    <th>Third Shift SD</th>
-                    <th>Third Shift ED</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td><a href="#">Work 1</a></td>
-                    <td>Doe</td>
-                    <td>john@example.com</td>
-                    <td><a href="#">Work 1</a></td>
-                    <td>Doe</td>
-                    <td>john@example.com</td>
-                  </tr>
-                  <tr>
-                    <td><a href="#">Work 2</a></td>
-                    <td>Moe</td>
-                    <td>mary@example.com</td>
-                    <td><a href="#">Work 2</a></td>
-                    <td>Moe</td>
-                    <td>mary@example.com</td>
-                  </tr>
-                  <tr>
-                    <td><a href="#">Work 3</a></td>
-                    <td>Dooley</td>
-                    <td>july@example.com</td>
-                    <td><a href="#">Work 3</a></td>
-                    <td>Dooley</td>
-                    <td>july@example.com</td>
-                  </tr>
-                </tbody>
+                <app-employee-shift-requiremtns></app-employee-shift-requiremtns>
               </table>
             </div>
             <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab">
