Added Identity Tables
Added Login Controller
Added first steps for generating a work WorkPlanDto
Added date-picker.component

--- a/PlanGeneratorFE/src/app/employees/employee-detail/employee-absence-dates/employee-absence-dates.component.html
+++ b/PlanGeneratorFE/src/app/employees/employee-detail/employee-absence-dates/employee-absence-dates.component.html
@@ -2,13 +2,11 @@
     <tr>
       <th>Start Date</th>
       <th>End Date</th>
-      <th>Type</th>
     </tr>
   </thead>
   <tbody>
     <tr *ngFor="let absDate of employeeAbsenceDates">
-      <td>{{absDate.startDate}}</td>
-      <td>{{absDate.endDate}}</td>
-      <td>{{absDate.type}}</td>
+      <td>{{absDate.startDate | date: 'dd-MM-yyyy'}}</td>
+      <td>{{absDate.endDate | date: 'dd-MM-yyyy'}}</td>
     </tr>                  
   </tbody>
